[package]
name = "flow-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
otopr = "0.1.5" # protobuf library
# prost-types = "0.8.0" # protobuf well-known types for prost
tonic = "0.5.2" # gRPC library

[dev-dependencies]
tokio = { version = "1", features = ["full"] } # async runtime for examples
chrono = "0.4.19" # Date and time library

#[build-dependencies]
#prost-build = "0.8.0" # for generating Rust code from .proto files
#prost-types = "0.8.0" # for parsing file descriptors
#which = "4.2.2" # for finding protoc binary on musl targets
#tempfile = "3.2.0" # for outputting protoc file descriptors

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"