[package]
name = "flow-sdk"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library for developing on the Flow blockchain network"
repository = "https://github.com/fee1-dead/flow.rs"

[dependencies]
otopr = "0.4.0" # protobuf library
# prost-types = "0.8.0" # protobuf well-known types for prost
tonic = { version = "0.5.2", default_features = false } # gRPC library
http = "0.2.5"
http-body = "0.4.3"
rlp = "0.5.1"
bytes = "1.1.0"
thiserror = "1.0.30"
cadence_json = { version = "0.1.2", path = "cadence_json/" }
serde_json = "1.0.68"
serde = "1.0.130"
hex = "0.4.3"
futures-timer = "3.0.2"
futures-util = "0.3.17"
tiny-keccak = { version = "2.0.2", features = ["sha3"], optional = true }
# sha2 = { version = "0.9.8", optional = true }
secp256k1 = { version = "0.20.3", optional = true }
rand = { version = "0.6.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] } # async runtime for examples
chrono = "0.4.19" # Date and time library
hex = "0.4.3"
rand = "0.6.5"
secp256k1 = { version = "0.20.3", features = ["rand"] }
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"

[features]
default = ["sha3-hash", "secp256k1-sign", "tonic-transport"]
# sha2-hash = ["sha2"]
sha3-hash = ["tiny-keccak"]
secp256k1-sign = ["secp256k1"]
secp256k1-rand = ["secp256k1-sign", "secp256k1/rand", "rand"]
tonic-transport = ["tonic/transport"]

[workspace]
members = ["cadence_json", "flow-examples"]
