[package]
name = "cadence_json"
description = "Cadence JSON interchange format library"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.2"
serde = "1.0.130"
serde_with = "1.10.0"
hex = "0.4.3"

[dev-dependencies]
serde_json = "1.0"