[package]
name = "flow-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
flow-sdk = { path = "../", features = ["secp256k1-rand"] }
serde = "1.0.130"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
lazy_static = "1.4.0"
rustyline = "9.0.0"
comfy-table = "4.1.1"